Fix gap trending block

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -299,7 +299,7 @@ a {
       }
       & .trending-wrapper {
         display: flex;
-        gap: 24px;
+        gap: 18px;
         align-items: center;
         margin-bottom: 18px;
         &:last-child {
